styles.css
body{
  margin: 0;
  padding: 0;
  font-family: 'Roboto', sans-serif;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.header{
  background-color: #1f2937;
  color: white;
  padding: 20px 400px;
  padding-bottom: 100px;
}
.header-logo{
  font-size: 24px;
  color: #f9faf8;
  margin-right: auto;
}
.link{
  font-size: 18px;
  color: #e5e7eb;
}
.top-header{
  display: flex;
  gap: 20px;
}

.content-header{
  display: flex;
  padding-top: 100px;
}
#image1{
  height: 300px;
  width: auto;
  border: 3px solid #5e9013;
  border-radius: 12px;
}
button{
  background-color: #3882f6;
  padding: 8px 50px;
  border-radius: 12px;
  color: white;
}
h1{
  font-size: 48px;
  color: #f9faf8;
  font-weight: bolder;
}


#c-head{
  font-size: 36px;
  color: #1f2937;
  font-weight: bolder;
}

.content{
  display: flex;
  flex-direction: column;
  align-items: center;
}
.rounded-images{
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 20px;
  padding: 0 300px;
}
.c-img{
  border: 3px solid #94eb11;
  border-radius: 12px;
  width: 300px;
  height: auto;
}


.quote{
  display: flex;
  flex-direction: column;
  background-color: #e5e7eb;
  padding: 20px 400px ;
}
.quote-text{
  font-size: 36px;
  color: #1f2937;
  font-style: italic;
  align-self: center;
}
.quote-author{
  align-self: flex-end;
  font-size: 24px;
}


.top-footer{
  background-color: #3882f6;
  color: #e5e7eb;
  display: flex;
  margin: 100px 300px;
  justify-content: space-around;
  align-items: center;
}
#footer-button{
  border: 1px solid #e5e7eb;
}


.footer{
  background-color: #1f2937;
  height: 100px;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #f9faf8;
}

figcaption{
  font-size: 12px;
  color: rgb(190, 189, 189);
}

